<resources>
    <string name="app_name">Intent Challenge Application</string>
    <string name="contacts_app">Contacts App</string>
    <string name="create_btn_text">Create new contact</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="create">create</string>
    <string name="choose_icon">Choose icon</string>
</resources>